# MCPSERVER-DEPLOYMENT

./: .gitignore  README.md  pyproject.toml
src/mcpserver/: __main__.py  add_numbers.py  deployments.py  logging_config.py
