[project]
name = "mcpserver-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26.0",
    "loguru>=0.7.0",
    "isort>=8.0.0",
    "black>=26.1.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

# Without wheel → creates source distribution (.tar.gz)
# With wheel → creates binary distribution (.whl) + source
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

